[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = "privat project"
authors = ["Artem Sorokin <85310022+juman-j@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rasa = {version = "^3.6.2", python = ">=3.9,<3.11"}
sqlalchemy = "<2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
